examples/test/testpolicy6229.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6229
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key42: value48
      key34: value11
      key16: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value46
      podSelector:
        matchLabels:
          key36: value44
          key11: value0
